# vscode

./: Problem1.js  ScaledRect.js  extra.js  gdefsdefsgdefs0linearGradient id=gr.txt  test.py
Documentation/: How_to_run_napi.txt
Napi/: CMakeLists.txt  hello.cc  package-lock.json
Napi with opencv/: CMakeLists.txt  index.js  opencv.cc  package-lock.json  package.json
c++/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CmakeLists.txt  ColorizeImage.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _exp.cpp  cmake_install.cmake  colorize_image.vcxproj  colorize_image.vcxproj.filters
c++/colorize_image.dir/Debug/: colorize_image.exe.recipe  colorize_image.ilk
c++/colorize_image.dir/Debug/colorize_image.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  colorize_image.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
c++/democv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CmakeLists.txt  MyOpenCVProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  my_app.vcxproj  my_app.vcxproj.filters
cmake/my_project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CmakeLists.txt  MyProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compute_boxes.cpp  compute_boxes.h  compute_boxes.vcxproj  compute_boxes.vcxproj.filters  draw.cpp  main.cpp  my_program.vcxproj  my_program.vcxproj.filters
cmake/my_project/Debug/: compute_boxes.lib
react/: boxes.js
(+50 files in other folders)
